# agentverify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agentverify/: __init__.py  _step_builder.py  assertions.py  errors.py  fixtures.py  markers.py  matchers.py  mocking.py  models.py  plugin.py  probe.py
agentverify/cassette/: io.py  recorder.py  sanitize.py
agentverify/cassette/adapters/: anthropic.py  base.py  bedrock.py  gemini.py  litellm.py  openai.py
agentverify/frameworks/: __init__.py  langchain.py  langgraph.py  openai_agents.py  strands.py
benchmarks/execution-model-trajectory/: DESIGN.md  README.md  collect_results.py  pyproject.toml  run_all.sh
benchmarks/execution-model-trajectory/langgraph-multi-agent-supervisor/: _langgraph_agent_factory.py  agentcore_test.py  agentverify_test.py  conftest.py  deepeval_test.py
benchmarks/execution-model-trajectory/langgraph-multi-agent-supervisor/agentcore_evaluator_cdk/: README.md  app.py  cdk.json  deploy.sh  destroy.sh  requirements.txt  stack.py
benchmarks/execution-model-trajectory/langgraph-multi-agent-supervisor/agentcore_evaluator_cdk/lambda_src/: lambda_function.py
benchmarks/execution-model-trajectory/results/: preliminary-2026-05-17T144500.json  preliminary-2026-05-17T144500.md  results-2026-05-17T230647.json  results-2026-05-17T230647.md  results-2026-05-17T232008.json  results-2026-05-17T232008.md
benchmarks/execution-model-trajectory/strands-weather-forecaster/: _strands_agent_factory.py  agentcore_test.py  agentverify_test.py  conftest.py  deepeval_test.py
benchmarks/execution-model-trajectory/strands-weather-forecaster/agentcore_evaluator_cdk/: README.md  app.py  deploy.sh  destroy.sh  stack.py
benchmarks/execution-model-trajectory/strands-weather-forecaster/agentcore_evaluator_cdk/lambda_src/: lambda_function.py
examples/custom-converter-python-agent/: README.md  agent.py  converter.py  pyproject.toml
examples/custom-converter-python-agent/tests/: conftest.py  test_tax_agent.py
examples/custom-converter-python-agent/tests/cassettes/: tax_calculation.yaml
examples/langchain-issue-triage/: README.md  agent.py  converter.py  pyproject.toml
examples/langchain-issue-triage/tests/: conftest.py  test_converter.py  test_issue_triage.py  test_resolve_target_repo.py
examples/langchain-issue-triage/tests/cassettes/: issue_triage_mock.yaml  issue_triage_real.yaml
examples/langgraph-multi-agent-supervisor/: README.md  agent.py  pyproject.toml
examples/langgraph-multi-agent-supervisor/tests/: conftest.py  test_supervisor.py
examples/langgraph-multi-agent-supervisor/tests/cassettes/: supervisor_faang.yaml
examples/mcp-server/: README.md  github_server.py
examples/mcp-server/tests/: test_github_server.py
examples/openai-agents-llm-as-a-judge/: README.md  agent.py  pyproject.toml
examples/openai-agents-llm-as-a-judge/tests/: conftest.py  test_llm_as_a_judge.py
examples/openai-agents-llm-as-a-judge/tests/cassettes/: detective_in_space.yaml
examples/strands-file-organizer/: README.md  agent.py  converter.py  pyproject.toml
examples/strands-file-organizer/tests/: conftest.py  test_converter.py  test_file_organizer.py  test_resolve_target_dir.py
examples/strands-file-organizer/tests/cassettes/: file_organizer.yaml
examples/strands-weather-forecaster/: README.md  pyproject.toml  weather_agent.py
examples/strands-weather-forecaster/tests/: conftest.py  test_weather_forecaster.py
examples/strands-weather-forecaster/tests/cassettes/: weather_seattle.yaml
examples/tests/: test_smoke.py
tests/: conftest.py  test_assertions.py  test_base_adapter.py  test_cassette_io.py  test_errors.py  test_fixtures.py  test_init.py  test_markers.py  test_matchers.py  test_mocking.py  test_models.py  test_plugin.py  test_probe.py  test_properties.py  test_recorder.py  test_sanitize.py  test_step_builder.py
tests/test_adapters/: test_anthropic.py  test_bedrock.py  test_gemini.py  test_litellm.py  test_openai.py
tests/test_frameworks/: test_langchain.py  test_langgraph.py  test_openai_agents.py  test_strands.py
