[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strands-file-organizer"
version = "0.1.0"
description = "Strands Agents file organizer example for agentverify"
requires-python = ">=3.10"
dependencies = [
    "strands-agents",
    "strands-agents-tools",
    "mcp",
    "agentverify",
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis"]

[tool.setuptools]
py-modules = ["agent", "converter"]
